<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aviya.takeandgo2.controller.fragment.YourCarFragment">
    <TextView
        android:id="@+id/noReservationTextView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/there_is_no_open_reservation_in_your_name" />
<LinearLayout
    android:id="@+id/openReservationLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/HorizontalLinearLayout"
        android:background="@drawable/item">
    <TextView
        style="@style/YourCarStyle"
        android:paddingLeft="20dp"
        android:text="reservation for car "/>
    <TextView
        android:id="@+id/carNumberText"
        style="@style/YourCarStyle"
        android:text="123456789"/>
    </LinearLayout>
    <Button
        android:id="@+id/viewCarDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="v i e w   f u l l   c a r   d e t a i l s"
        android:background="@drawable/button" />
    <Button
        android:id="@+id/closeReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="c l o s e    r e s e r v a t i o n"
        android:background="@drawable/button" />

    <LinearLayout
        android:id="@+id/closeReservationLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/closeReservLayout"
            android:text="please enter information to help determine your payment:"
            android:textColor="#660029"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/closeReservLayout"
            android:text="@string/how_many_kilometers_did_you_drive"
            android:textAlignment="center"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/closeRsrvKilometers"
            style="@style/closeReservLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""/>
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/HorizontalLinearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/closeReservLayout"
                android:text="@string/did_you_add_fuel"
                android:layout_marginRight="0dp"/>
            <CheckBox
                android:id="@+id/closeRsrvAddedFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:textSize="15dp"
                android:text="Yes"/>
            <CheckBox
                android:id="@+id/closeRsrvNoAddedFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                android:text="No"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:id="@+id/closeRsrvFuelLayout">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                style="@style/closeReservLayout"
                android:textAlignment="center"
                android:text="@string/how_much_did_you_pay_for_fuel">
            </TextView>
            <EditText
                android:id="@+id/closeRsrvFuelPay"
                style="@style/closeReservLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text=""/>
        </LinearLayout>
        <Button
            android:id="@+id/submitCloseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="s  u  b  m  i  t "
            />
    </LinearLayout>
    <TextView
        android:id="@+id/pleaseWaitTextView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="@string/please_wait_while_loading"/>

</LinearLayout>
</LinearLayout>
